projects/ng-aquila/documentation/examples/error/error/error-example.ts
import { NxErrorComponent } from '@allianz/ng-aquila/base';
import { Component } from '@angular/core';

/** @title Error example */
@Component({
  selector: 'error-example',
  templateUrl: './error-example.html',
  styleUrls: ['./error-example.css'],
  imports: [NxErrorComponent],
})
export class ErrorExampleComponent {}
